230729_4 新增：IPv6格式检查、执行结果反馈

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "xxxxxxxxxxxxxxxxxxxxxxxxx",
-    "hostname": "www.example.com",
-    "ip": ""
+    "token":"your http token",
+    "hostname":"example.dynv6.net",
+    "ip":"auto"
 }
